# Exploring-Face-Detection-Face-Recognition-and-Facial-Expression-Recognition

./: CMakeLists.txt  README.md  emotionsModel.ipynb  full_test.sh  pythonTesting.ipynb  testing.sh
include/: functs.h  helpers.h  image.h  loadFace.h  matching.h  video.h
models/: README.md
src/: api.cpp  functs.cpp  helpers.cpp  image.cpp  loadFace.cpp  main.cpp  matching.cpp  video.cpp
